--- a/koshik.html
+++ b/koshik.html
@@ -37,8 +37,16 @@
             <!-- Відео, яке спочатку приховано -->
             <div id="video-container" style="display: none;">
                 <h3>Відео про ваш автомобіль</h3>
-                <iframe width="670" height="377" src="https://www.youtube.com/embed/_OfVL8ETIZI" title="Never Gonna Give You Up українською! Ніколи тебе не покину    Рікрол" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+                <iframe width="670" height="377" 
+                        src="https://www.youtube.com/embed/_OfVL8ETIZI?autoplay=1" 
+                        title="Never Gonna Give You Up українською! Ніколи тебе не покину Рікрол" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" 
+                        allowfullscreen>
+                </iframe>
             </div>
+
         </section>
     
         <script src="/JS/cart.js"></script>
